# learn-opengl-template

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
